--- a/style.css
+++ b/style.css
@@ -110,3 +110,18 @@ body.dark-mode .skills-table th {
 body.dark-mode .skills-table td {
   background-color: #111;
 }
+
+.hidden {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#cover-letter {
+  font-size: 16px;
+  line-height: 1.5;
+  background-color: #f4f4f4;
+  padding: 15px;
+  border-left: 4px solid #000;
+  border-radius: 5px;
+}
